changed image path

--- a/flash_cards.ipynb
+++ b/flash_cards.ipynb
@@ -243,7 +243,7 @@
     "    \n",
     "plt.rcParams.update({'font.size': 22})\n",
     "fig.tight_layout()\n",
-    "plt.savefig('flash_cards.jpg')\n",
+    "plt.savefig('images/flash_cards.jpg')\n",
     "plt.show()"
    ]
   },
